[package]
name = "fiv"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive", "wrap_help"] }
gtk = "0.18.2"
image = "0.25.5"
pariter = "0.5.1"
