# fiv - Fast Image Viewer
# Copyright 2025  Simon Arlott
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "fiv"
version = "2.3.0"
description = "Fast Image Viewer"
authors = ["Simon Arlott"]
license = "GPL-3.0-or-later"
edition = "2024"
build = "build.rs"

[package.metadata]
copyright-years = "2015-2025"

[build-dependencies]
anyhow = "1.0.95"
cargo_metadata = "0.19.2"
vergen-git2 = "1.0.5"

[dependencies]
anyhow = "1.0.95"
async-notify = "0.3.0"
bitfield = "0.19.0"
bytemuck = "1.21.0"
clap = { version = "4.5.27", features = ["cargo", "derive", "env", "help", "string", "wrap_help"] }
derive_more = { version = "2.0.1", features = ["constructor", "debug"] }
enum_dispatch = "0.3.13"
gtk = "0.18.2"
image = "0.25.5"
itertools = "0.14.0"
libheif-rs = { version = "1.1.0", features = ["compile-libheif", "embedded-libheif-plugins"] }
log = "0.4.25"
memmap2 = "0.9.5"
nutype = "0.6.1"
pariter = "0.5.1"
parse-size = "1.1.0"
pathdiff = "0.2.3"
rexiv2 = { version = "0.10.0", features = ["raw-tag-access"] }
stderrlog = "0.6.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
threadpool = "1.8.1"
tree_magic_mini = { version = "3.1.6", features = ["with-gpl-data"] }
turbojpeg = { version = "1.2.2", features = ["require-simd"] }
